Some info about XMPP
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,14 @@
     margin-right: auto;
 }
 
+.box-medium-next {
+    margin-top: 20px;
+}
+
 .page-footer {
     background-color: #F5F5F5;
     border-top: 1px solid #E5E5E5;
-    margin-top: 60px;
+    margin-top: 40px;
     padding: 20px 0;
 }
 
