Fix black-on-black bxslider
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -258,3 +258,8 @@
 	
 
 
+/* Customizing bxslider */
+.slider-app .bx-wrapper .bx-pager.bx-default-pager a:hover,
+.slider-app .bx-wrapper .bx-pager.bx-default-pager a.active {
+        background: #fff;
+}
