--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -97,9 +97,10 @@
 	a, a:visited { color: #333; text-decoration: underline; outline: 0; }
 	a:hover, a:focus { color: #000; }
 	p a, p a:visited { line-height: inherit; }
-	a.footerlink:link {color: #999;text-decoration: underline}
-	a.footerlink:visited {color: #999;}
-	a.footerlink:hover {color: #777;}
+	footer a:link {color: #999;text-decoration: underline}
+	footer a:visited {color: #999;}
+	footer a:hover {color: #777;}
+	footer li { margin-bottom: 4px; }
 
 
 /* #Lists
